# diffused-effects

./: README.md  cabal.project  diffused-effects.cabal
benchmark/: Bench.hs
benchmark/NonDet/: NQueens.hs
examples/: Parser.hs  ReinterpretLog.hs  Teletype.hs
src/: Algebra.hs
src/Algebra/: Cull.hs  Fail.hs  GADT.hs  Lift.hs  Named.hs  Trans.hs
src/Algebra/Choose/: Church.hs
src/Algebra/Cull/: Church.hs
src/Algebra/Cut/: Church.hs
src/Algebra/Empty/: Maybe.hs
src/Algebra/Fail/: Either.hs
src/Algebra/Fresh/: Strict.hs
src/Algebra/NonDet/: Church.hs
src/Algebra/Trace/: Ignoring.hs  Printing.hs  Returning.hs
src/Control/: Algebra.hs  Effect.hs
src/Control/Algebra/: Class.hs  Cull.hs  Fail.hs  Interpose.hs  Interpret.hs  Lift.hs  Named.hs  Pure.hs  Reader.hs  Resource.hs
src/Control/Algebra/Choose/: Church.hs
src/Control/Algebra/Cut/: Church.hs
src/Control/Algebra/Empty/: Maybe.hs
src/Control/Algebra/Error/: Either.hs
src/Control/Algebra/Fresh/: Strict.hs
src/Control/Algebra/NonDet/: Church.hs
src/Control/Algebra/Resumable/: Abort.hs  Resume.hs
src/Control/Algebra/State/: Lazy.hs  Strict.hs
src/Control/Algebra/Trace/: Ignoring.hs  Printing.hs  Returning.hs
src/Control/Algebra/Writer/: Strict.hs
src/Control/Carrier/Empty/: Maybe.hs
src/Control/Carrier/NonDet/: Church.hs
src/Control/Effect/: Catch.hs  Choose.hs  Class.hs  Cull.hs  Cut.hs  Empty.hs  Error.hs  Fail.hs  Fresh.hs  Lift.hs  NonDet.hs  Reader.hs  Resource.hs  Resumable.hs  State.hs  Sum.hs  Throw.hs  Trace.hs  Writer.hs
src/Control/Effect/Catch/: Internal.hs
src/Control/Effect/Choose/: Internal.hs
src/Control/Effect/Empty/: Internal.hs
src/Control/Effect/Error/: Internal.hs
src/Control/Effect/Lift/: Internal.hs
src/Control/Effect/NonDet/: Internal.hs
src/Control/Effect/Reader/: Internal.hs  Named.hs
src/Control/Effect/State/: Internal.hs  Named.hs
src/Control/Effect/Sum/: Named.hs
src/Control/Effect/Throw/: Internal.hs
src/Control/Effect/Writer/: Internal.hs
src/Control/Monad/: Lift.hs
src/Control/Monad/Trans/: Lower.hs
src/Effect/: Catch.hs  Choose.hs  Class.hs  Cull.hs  Cut.hs  Empty.hs  Error.hs  Fail.hs  Fresh.hs  GADT.hs  Labelled.hs  Lift.hs  NonDet.hs  Reader.hs  State.hs  Sum.hs  Throw.hs  Trace.hs  Writer.hs
src/Effect/Catch/: Internal.hs
src/Effect/Choose/: Internal.hs
src/Effect/Empty/: Internal.hs
src/Effect/Error/: Internal.hs
src/Effect/Lift/: Internal.hs
src/Effect/NonDet/: Internal.hs
src/Effect/Reader/: Internal.hs  Named.hs
src/Effect/State/: Internal.hs  Named.hs
src/Effect/Sum/: Named.hs
src/Effect/Throw/: Internal.hs
src/Effect/Writer/: Internal.hs
test/Control/Effect/: Spec.hs
test/Control/Effect/NonDet/: Spec.hs
