cabal-version:       2.2

name:                diffused-effects
version:             0.0.0.0
synopsis:            all your intentions turned to vapour
homepage:            https://github.com/fused-effects/diffused-effects
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nicolas Wu, Tom Schrijvers, Rob Rix, Patrick Thomson
maintainer:          robrix@github.com
copyright:           2018-2019 Nicolas Wu, Tom Schrijvers, Rob Rix, Patrick Thomson
category:            Control
build-type:          Simple
extra-source-files:
  README.md

tested-with:         GHC == 8.8.3

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:
    Control.Algebra
    Control.Algebra.Choose.Church
    Control.Algebra.Class
    Control.Algebra.Cull
    Control.Algebra.Cut.Church
    Control.Algebra.Empty.Maybe
    Control.Algebra.Fail
    Control.Algebra.Fresh.Strict
    Control.Algebra.Lift
    Control.Algebra.Named
    Control.Algebra.NonDet.Church
    Control.Algebra.Pure
    Control.Algebra.Reader
    Control.Algebra.State.Lazy
    Control.Algebra.State.Strict
    Control.Algebra.Trace.Ignoring
    Control.Algebra.Trace.Printing
    Control.Algebra.Trace.Returning
    Control.Algebra.Writer.Strict
    Control.Effect.Catch
    Control.Effect.Choose
    Control.Effect.Class
    Control.Effect.Cull
    Control.Effect.Cut
    Control.Effect.Empty
    Control.Effect.Error
    Control.Effect.Fail
    Control.Effect.Fresh
    Control.Effect.Lift
    Control.Effect.NonDet
    Control.Effect.Pure
    Control.Effect.Reader
    Control.Effect.Reader.Named
    Control.Effect.State
    Control.Effect.State.Named
    Control.Effect.Sum
    Control.Effect.Sum.Named
    Control.Effect.Throw
    Control.Effect.Trace
    Control.Effect.Writer
  other-modules:
    Control.Effect.Catch.Internal
    Control.Effect.Choose.Internal
    Control.Effect.Empty.Internal
    Control.Effect.Error.Internal
    Control.Effect.Lift.Internal
    Control.Effect.NonDet.Internal
    Control.Effect.Reader.Internal
    Control.Effect.State.Internal
    Control.Effect.Throw.Internal
    Control.Effect.Writer.Internal
  build-depends:
    , base           >= 4.9 && < 4.14
    , deepseq       ^>= 1.4.3
    , transformers
  hs-source-dirs: src


source-repository head
  type:     git
  location: https://github.com/fused-effects/diffused-effects
