cabal-version:       2.2

name:                diffused-effects
version:             0.0.0.0
synopsis:            all your intentions turned to vapour
homepage:            https://github.com/fused-effects/diffused-effects
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nicolas Wu, Tom Schrijvers, Rob Rix, Patrick Thomson
maintainer:          robrix@github.com
copyright:           2018-2019 Nicolas Wu, Tom Schrijvers, Rob Rix, Patrick Thomson
category:            Control
build-type:          Simple
extra-source-files:
  README.md

tested-with:         GHC == 8.8.3

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:
    Algebra
    Algebra.Choose.Church
    Algebra.Cull
    Algebra.Cut.Church
    Algebra.Fail
    Algebra.Fresh.Strict
    Algebra.Lift
    Algebra.Named
    Algebra.NonDet.Church
    Algebra.Trace.Ignoring
    Algebra.Trace.Printing
    Algebra.Trace.Returning
    Effect.Catch
    Effect.Choose
    Effect.Class
    Effect.Cull
    Effect.Cut
    Effect.Empty
    Effect.Error
    Effect.Fail
    Effect.Fresh
    Effect.Lift
    Effect.NonDet
    Effect.Reader
    Effect.Reader.Named
    Effect.State
    Effect.State.Named
    Effect.Sum
    Effect.Sum.Named
    Effect.Throw
    Effect.Trace
    Effect.Writer
  other-modules:
    Effect.Catch.Internal
    Effect.Choose.Internal
    Effect.Empty.Internal
    Effect.Error.Internal
    Effect.Lift.Internal
    Effect.NonDet.Internal
    Effect.Reader.Internal
    Effect.State.Internal
    Effect.Throw.Internal
    Effect.Writer.Internal
  build-depends:
    , base           >= 4.9 && < 4.14
    , deepseq       ^>= 1.4.3
    , transformers
  hs-source-dirs: src


source-repository head
  type:     git
  location: https://github.com/fused-effects/diffused-effects
